# ICS_2024_laba

./: .clang-format  CMakeLists.txt  PB23111715-王一凡.md  README.md
cmake/: AddCLI11.cmake  AddGoogleTest.cmake  run_test.cmake
include/assembler/: assembler.hpp  instruction.hpp  opcode.def  operand.hpp  parser.hpp  solution.hpp  token.hpp
include/assembler-c/: assembler.h  extern_c.h  instruction.h  operand.h  parser.h  solution.h  token.h
solution/: solution.c  solution.cpp
src/: assembler.cpp  instruction.cpp  main.cpp  operand.cpp  parser.cpp  token.cpp
test/: CMakeLists.txt
test/code_lc3/lab2/: lab2.asm
test/code_lc3/lab3/: lab3.asm
test/code_lc3/lab4/: lab4.asm
test/code_lc3/lab5/: lab5.asm
unittest/: CMakeLists.txt  instruction_test.cpp  parser_test.cpp
